--- a/templates/login.html
+++ b/templates/login.html
@@ -100,7 +100,7 @@
         // IMPORTANT: Replace with your actual Firebase project configuration.
         // You can find this in your Firebase project settings -> Project settings -> General -> Your apps -> Firebase SDK snippet (Config)
         const firebaseConfig = {
-            apiKey: "AIzaSyCZVScscXjXb4IB60GbkR6ZqskDVhGXL14",
+            apiKey: "Googlr api key",
             authDomain: "tws-question-bank-82a10.firebaseapp.com",
             projectId: "tws-question-bank-82a10",
             storageBucket: "tws-question-bank-82a10.firebasestorage.app",
